--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -26,7 +26,7 @@
         </div>
 
         <div class="columns notification is-centered is-multipleline">
-          <div class="column is-one-quarter-desktop is-one-third-tablet">
+          <div class="column is-one-third-desktop is-one-third-tablet">
             <div class="card">
               <div class="card-image">
                 <figure class="image">
@@ -43,7 +43,7 @@
               </div>
             </div>
           </div>
-          <div class="column is-one-quarter-desktop is-one-third-tablet">
+          <div class="column is-one-third-desktop is-one-third-tablet">
             <div class="card">
               <div class="card-image">
                 <figure class="image">
@@ -61,7 +61,7 @@
             </div>
           </div>
 
-          <div class="column is-one-quarter-desktop is-one-third-tablet">
+          <div class="column is-one-third-desktop is-one-third-tablet">
             <div class="card">
               <div class="card-image">
                 <figure class="image is-480x480">
