--- a/src/app/components/video/video.component.html
+++ b/src/app/components/video/video.component.html
@@ -6,10 +6,7 @@
 
                     <div class="column is-8">
                         <div class="media">
-                            <iframe width="100%" height="350" src="https://www.youtube.com/embed/JFKRBmQhALM"
-                                title="YouTube video player" frameborder="0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen></iframe>
+                            <iframe src="http://www.youtube.com/embed/videoseries?list=PLirvGqVPjmPDlgH-ByRhNiHZLxzmhwWJU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                     </div>
                     <div class="column is-5 has-text-centered">
