--- a/src/app/components/videos/videos.component.html
+++ b/src/app/components/videos/videos.component.html
@@ -4,7 +4,7 @@
       <div class="container">
         <div class="columns notification is-centered is-multipleline">
 
-          <div class="column is-one-third-desktop is-one-third-tablet" *ngFor="let data of data.items;">
+          <div class="column is-one-third-desktop is-one-third-tablet" *ngFor="let data of data;">
             <div class="card">
               <div class="card-image">
                 <figure class="image">
