--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -23,16 +23,16 @@
                 Videos
             </a>
 
-            <a class="navbar-item" [routerLink]="['']">
+            <!-- <a class="navbar-item" [routerLink]="['']">
                 Blogs
-            </a>
+            </a> -->
 
             <a class="navbar-item" [routerLink]="['contact']">
                 Contact Me
             </a>
         </div>
 
-        <div class="navbar-end" *ngIf="!isLogin">
+        <!-- <div class="navbar-end" *ngIf="!isLogin">
             <div class="buttons has-addons mx-2">
                 <a [routerLink]="['login']" class="button is-rounded ">Login</a>
                 <a [routerLink]="['join']" class="button is-danger is-rounded">Join Now</a>
@@ -42,6 +42,7 @@
           <div class="buttons has-addons mx-2">
               <a [routerLink]="['profile']" class="button is-rounded ">Profile</a>
           </div>
-        </div>
+        </div> -->
+        
     </div>
 </nav>
