--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -18,7 +18,7 @@
             </div>
             <p class="subtitle py-5" id="typedtext">{{typewriter_display }}</p>
             <div class="column">
-              <!-- <button class="button is-primary m-2">Browse Blog</button> -->
+              <button class="button is-primary m-2">Browse Blog</button>
               <button class="button is-danger m-2" [routerLink]="['videos']">Browse Video Tutorial</button>
               <button class="button is-success m-2" [routerLink]="['contact']">Contact Me</button>
             </div>
@@ -44,7 +44,7 @@
             </div>
           </div>
 
-          <!-- <div class="column is-one-third-desktop is-one-third-tablet">
+          <div class="column is-one-third-desktop is-one-third-tablet">
             <div class="card">
               <div class="card-image">
                 <figure class="image">
@@ -60,7 +60,7 @@
                 <button class="button is-primary m-2 has-text-centered">Go to Blog</button>
               </div>
             </div>
-          </div> -->
+          </div>
 
           <div class="column is-one-third-desktop is-one-third-tablet">
             <div class="card">
